mensaje de error por campos vacios en el login

--- a/admision/admision/vistas/LoginPage.xaml
+++ b/admision/admision/vistas/LoginPage.xaml
@@ -32,7 +32,7 @@
                 
             </ActivityIndicator>
             <Button 
-                Command="{Binding btnAceptar}"
+                Command="{Binding aceptarCommand}"
                 Text="ACEPTAR"
                 BackgroundColor="#0072BD"
                 FontSize="18"
